<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F1515"
    tools:context=".Splash">

    <ImageView
        android:id="@+id/whitecar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="319dp"
        android:layout_height="46dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="46dp"
        android:fontFamily="monospace"
        android:text="@string/projectz"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whitecar"  />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="256dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/quote"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/readingbtn"
        android:layout_width="236dp"
        android:layout_height="42dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="88dp"
        android:background="@drawable/roundbtnselector"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:text="@string/readbtn"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        app:iconTint="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>