<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height="match_parent"
    android:contentDescription="TODO">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".how_we_do_it">

        <TextView
            android:id="@+id/btn_bar2"
            android:layout_width="412dp"
            android:layout_height="57dp"
            android:layout_marginStart="159dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="194dp"
            android:layout_marginBottom="481dp"
            android:background="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintVertical_bias="0.864" />

        <TextView
            android:id="@+id/logo_bar2"
            android:layout_width="412dp"
            android:layout_height="57dp"
            android:background="@drawable/rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="482dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton8"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/checker"
            />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="483dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton9"
            app:srcCompat="@drawable/checker" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="483dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton2"
            app:srcCompat="@drawable/paper" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="219dp"
            android:layout_height="55dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="549dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/image" />

        <TextView
            android:id="@+id/project_z_logo2"
            android:layout_width="114dp"
            android:layout_height="56dp"
            android:text="Project Z Logo"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="484dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_bar2"
            app:srcCompat="@drawable/contact" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="86dp"
            android:layout_height="19dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="337dp"
            android:layout_marginBottom="446dp"
            android:text="How We Do It"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_bar2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="363dp"
            android:layout_height="252dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="139dp"
            android:background="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.291"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/howto_step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="278dp"
            android:text="@string/howto_step1"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/howto_step2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/howto_step2"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/howto_step1" />

        <TextView
            android:id="@+id/howto_step3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/howto_step3"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/howto_step2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/enterwebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="244dp"
            android:layout_marginBottom="1dp"
            android:text="@string/enterwebsite"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="365dp"
            android:layout_height="34dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="125dp"
            android:background="@drawable/rectangle"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterwebsite" />

        <EditText
            android:id="@+id/editTextTextMultiLine2"
            android:layout_width="363dp"
            android:layout_height="94dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/rectangle"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="336dp"
            android:layout_marginBottom="3dp"
            android:text="Enter Article"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button"
            android:layout_width="65dp"
            android:layout_height="31dp"
            android:layout_marginEnd="140dp"
            android:text="Button"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toEndOf="@+id/enterwebsite" />

        <Button
            android:id="@+id/button2"
            android:layout_width="57dp"
            android:layout_height="23dp"
            android:layout_marginEnd="172dp"
            android:text="Button"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>